@@ -9,6 +9,7 @@
 * Fixed bug where #img# captions with double-byte characters were not working
 * Fixed bug where default settings were corrupt
 * Fixed several bugs in tag detection logic
+* Fixed bug where non-base64 and non-quoted-printable sections were not converted to utf-8
 
 = 1.4.10 (2012.12.11) =
 * Fixed warning when there is no subject
